name:                nbodies
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/nbodies#readme
license:             BSD3
license-file:        LICENSE
author:              Martino Ferrari
maintainer:          manda.mgf@gmail.com
copyright:           2017 Martino Ferrari
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nbodies
  hs-source-dirs:      src
  other-modules:       Phys
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       sdl2-gfx,
                       mtl
